Set kHasSeenWin10PromoPage in local_state instead of in profile prefs.

The pref is registered to the local state so the old code was incorrect.

BUG=685799

Review-Url: https://codereview.chromium.org/2659643003
Cr-Commit-Position: refs/heads/master@{#446497}